--- a/front/src/index.css
+++ b/front/src/index.css
@@ -110,3 +110,8 @@ body {
   background: #65c4fa;
   filter: blur(150px);
 }
+
+.blurback {
+  backdrop-filter: invert(5%);
+  box-shadow: 1px 5px 5px #26E7EE;
+}
