--- a/front/src/index.css
+++ b/front/src/index.css
@@ -115,3 +115,17 @@ body {
   backdrop-filter: invert(5%);
   box-shadow: 1px 5px 5px #26E7EE;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
